--- a/QLTV/Web.config
+++ b/QLTV/Web.config
@@ -72,11 +72,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
-    <add name="AppConnection" connectionString="Data Source=localhost:1521/orcl;DBA PRIVILEGE=SYSDBA;PASSWORD=eagle;PERSIST SECURITY INFO=True;USER ID=SYS;" />
-    <add name="ERP_Entities" connectionString="metadata=res://*/ResourceAccess.Entities.ORCL.csdl|res://*/ResourceAccess.Entities.ORCL.ssdl|res://*/ResourceAccess.Entities.ORCL.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/orcl;DBA PRIVILEGE=SYSDBA;PASSWORD=eagle;PERSIST SECURITY INFO=True;USER ID=SYS&quot;" providerName="System.Data.EntityClient" />
-    <add name="QLTVEntities" connectionString="metadata=res://*/Models.Entity.QLTV.csdl|res://*/Models.Entity.QLTV.ssdl|res://*/Models.Entity.QLTV.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A30ET4Q\EAGLEMSSQL17;initial catalog=QLTV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="QLTVEntities" connectionString="metadata=res://*/Models.Entity.QLTV.csdl|res://*/Models.Entity.QLTV.ssdl|res://*/Models.Entity.QLTV.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A30ET4Q\EAGLEMSSQL17;initial catalog=QuanLyThuVienDevmaster;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
