--- a/QLTV/Web.config
+++ b/QLTV/Web.config
@@ -72,7 +72,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-  <add name="QLTVEntities" connectionString="metadata=res://*/Models.Entity.QLTV.csdl|res://*/Models.Entity.QLTV.ssdl|res://*/Models.Entity.QLTV.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A30ET4Q\EAGLEMSSQL17;initial catalog=QuanLyThuVienDevmaster;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="QLTVEntities" connectionString="metadata=res://*/Models.Entity.QLTV.csdl|res://*/Models.Entity.QLTV.ssdl|res://*/Models.Entity.QLTV.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A30ET4Q\EAGLEMSSQL17;initial catalog=QuanLyThuVienDevmaster;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AppConnection" connectionString="Data Source=DESKTOP-A30ET4Q\EAGLEMSSQL17;Initial Catalog=QuanLyThuVienDevmaster;User ID=sa;Password=eagle;Integrated Security=True;" providerName="System.Data.sqlclient"/>
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
