--- a/QLTV/bin/QLTV.dll.config
+++ b/QLTV/bin/QLTV.dll.config
@@ -64,6 +64,12 @@
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
     </modules>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
   </system.webServer>
   <system.codedom>
     <compilers>
@@ -72,9 +78,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QLTVEntities" connectionString="metadata=res://*/Models.Entity.QLTV.csdl|res://*/Models.Entity.QLTV.ssdl|res://*/Models.Entity.QLTV.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A30ET4Q\EAGLEMSSQL17;initial catalog=QuanLyThuVienDevmaster;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="AppConnection" connectionString="Data Source=DESKTOP-A30ET4Q\EAGLEMSSQL17;Initial Catalog=QuanLyThuVienDevmaster;User ID=sa;Password=eagle;Integrated Security=True;" providerName="System.Data.sqlclient"/>
-  </connectionStrings>
+    <add name="AppConnection" connectionString="Data Source=DESKTOP-A30ET4Q\EAGLEMSSQL17;Initial Catalog=QuanLyThuVienDevmaster;User ID=sa;Password=eagle;Integrated Security=True;" providerName="System.Data.sqlclient" />
+  <add name="QLTVEntities" connectionString="metadata=res://*/Models.Entity.QLTV.csdl|res://*/Models.Entity.QLTV.ssdl|res://*/Models.Entity.QLTV.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A30ET4Q\EAGLEMSSQL17;initial catalog=QuanLyThuVienDevmaster;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
